# wsnamelet

./: ChangeLog  GNOME_WorkspaceNameApplet.server.in.in  ProjectHome.md  aligned_window.py  configure.in  wsname_applet.py
trunk/: ChangeLog  Makefile.am  README  autogen.sh  configure.in  wsname_applet.py
