AC_INIT(wsname_applet.py)

AM_INIT_AUTOMAKE(wsnamelet, 0.9.0)

AM_MAINTAINER_MODE
AC_PROG_INTLTOOL([0.21])

dnl check for python
AM_PATH_PYTHON

PKG_CHECK_MODULES(PYGTK, pygtk-2.0 gnome-python-2.0)
AC_SUBST(PYGTK_CFLAGS)
AC_SUBST(PYGTK_LIBS)

GETTEXT_PACKAGE=wsnamelet
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [The gettext package])

AM_PO_SUBDIRS

AC_OUTPUT([
Makefile
wsnamelet_globals.py
po/Makefile.in
])
